@@ -1503,6 +1503,5 @@ if ($SOBE->doProcessData())	{		// Checks, if a save button has been clicked (or 
 $SOBE->init();
 $SOBE->main();
 $SOBE->printContent();
-$formprotection->persistTokens();
 
 ?>
